--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
+    "axios": "^0.19.2",
     "emotion": "^10.0.27",
     "heroku": "^7.42.3",
     "node-sass": "^4.14.1",
@@ -20,6 +21,7 @@
     "react-slick": "^0.26.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
@@ -28,6 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
