--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.26"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
