--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "../server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node ../server.js",
-    "server": "nodemon ../server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "author": "Tim Ocampo",
   "license": "ISC",
