--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^5.2.0",
     "emotion": "^10.0.27",
     "heroku": "^7.42.3",
+    "mongoose": "^5.9.26",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
@@ -28,7 +29,7 @@
   },
   "scripts": {
     "start": "node server",
-    "dev" : "react-scripts start",
+    "dev": "react-scripts start",
     "server": "nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test",
