master | configure package.json for heroku deployment, added .env file.

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Tim Ocampo",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.26"
   },
