--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.26.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
